--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -61,7 +61,7 @@ jobs:
           python -m pip install .
           python -m pip install -U mypy
       - name: Type Check
-        run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
+        run: mypy src/peakrdl_python
 
   unit_tests:
     needs:
@@ -279,7 +279,7 @@ jobs:
         python -m pip install mypy
 
         python generate_testcases.py
-        mypy testcase_output --config-file=tests/.mypy.ini
+        mypy testcase_output
         # pylint --rcfile tests/pylint.rc testcase_output/autopep8 --disable=duplicate-code,line-too-long,too-many-statements,invalid-name,unused-import,too-many-instance-attributes,too-many-arguments,too-many-lines
 
         python -m unittest discover -s testcase_output
@@ -326,7 +326,7 @@ jobs:
         # run the autoformatting
         black autoformatted_output --line-length 120
         # check the files are correct with mypy and unittesting
-        mypy autoformatted_output --config-file=tests/.mypy.ini
+        mypy autoformatted_output
         python -m unittest discover -s autoformatted_output
 
   #-------------------------------------------------------------------------------
