--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -336,7 +336,7 @@ jobs:
     needs:
       # the documentation relies on examples so these must be prechecked
       # as part of the dependency
-      - autoformating
+      - unit_tests
 
     name: Build the sphinx documentation
     runs-on: ubuntu-latest
@@ -359,7 +359,6 @@ jobs:
   build:
     needs:
       - autoformating
-      - dev_runner
       - documentation
     name: Build source distribution
     runs-on: ubuntu-latest
