--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -120,6 +120,8 @@ jobs:
           python -m pip uninstall peakrdl-python -y
           # peakrdl-ipxact is needed for some of the test cases so is imported by the
           # generate_and_test script
+          
+          PYTHONPATH=/src
 
 
           # retrieve the example code from the systemRDL compiler
