Added new test for the child addrmap in the integration tests
(cherry picked from commit b95d4e8bdde73ee67e29f64a9683aad0925764af)

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -202,6 +202,11 @@ jobs:
           python tests/alternative_templates_toml/header_check.py --generated_package_location peakrdl_out/simple_user_template/ --top_name basic
           peakrdl python tests/testcases/basic.rdl -o peakrdl_out/dynamic_user_template/ --peakrdl-cfg tests/alternative_templates_dynamic_toml/peakrdl.toml
           python tests/alternative_templates_dynamic_toml/header_check.py --generated_package_location peakrdl_out/dynamic_user_template/ --top_name basic
+          
+          
+          peakrdl python tests/testcases/addr_map.rdl -o peakrdl_out/addr_map/
+          peakrdl python tests/testcases/addr_map.rdl -o peakrdl_out/addr_map/ -t "child_addr_map_type_c"
+          python -m unittest discover -s peakrdl_out/addr_map/
 
       - name: Check Examples
         run: |
