Break the integration tests into sub steps to make failures clearer

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -292,9 +292,16 @@ jobs:
         python -m pip install mypy
 
         python generate_testcases.py
+
+    - name: Static checks
+      run: |
+
+        # one of the test cases uses IPxact so we need the importer
         mypy testcase_output
         # pylint testcase_output/autopep8 --disable=duplicate-code,line-too-long,too-many-statements,invalid-name,unused-import,too-many-instance-attributes,too-many-arguments,too-many-lines
 
+    - name: Run the generated tests
+      run: |
         python -m unittest discover -s testcase_output
 
   autoformating:
