--- a/pyproject.toml
+++ b/pyproject.toml
@@ -434,7 +434,7 @@ known-third-party = ["enchant"]
 [tool.pylint.logging]
 # The type of string formatting that logging methods do. `old` means using %
 # formatting, `new` is for `{}` formatting.
-logging-format-style = "old"
+logging-format-style = "new"
 
 # Logging modules to check that the string format arguments are in logging
 # function parameter format.
@@ -454,21 +454,23 @@ confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFIN
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable = ["raw-checker-failed",
-           "bad-inline-option",
-           "locally-disabled",
-           "file-ignored",
-           "suppressed-message",
-           "deprecated-pragma",
-           "use-symbolic-message-instead",
-           "use-implicit-booleaness-not-comparison-to-string",
-           "use-implicit-booleaness-not-comparison-to-zero"]
+disable = [
+    "raw-checker-failed",
+    "bad-inline-option",
+    "locally-disabled",
+    "file-ignored",
+    "suppressed-message",
+    "deprecated-pragma",
+    "use-symbolic-message-instead",
+    "use-implicit-booleaness-not-comparison-to-string",
+    "use-implicit-booleaness-not-comparison-to-zero",
+    "logging-fstring-interpolation"]
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where it
 # should appear only once). See also the "--disable" option for examples.
-# enable =
+enable = ["logging-not-lazy"]
 
 [tool.pylint.method_args]
 # List of qualified names (i.e., library.method) which require a timeout
