Simplified the interation test conditional logic

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -306,32 +306,20 @@ jobs:
     - name: Generate testcases (lib_copy true)
       if: matrix.lib_copy == true
       run: |
-        python generate_testcases.py --copy_libraries --output lib_included_testcase_output
+        python generate_testcases.py --copy_libraries --output testcase_output
 
     - name: Generate testcases (lib_copy false)
       if: matrix.lib_copy == false
       run: |
-        python generate_testcases.py --output lib_excluded_testcase_output
+        python generate_testcases.py --output testcase_output
 
-    - name: Static checks (lib_copy true)
-      if: matrix.lib_copy == true
+    - name: Static checks
       run: |
-        mypy lib_included_testcase_output
-
-    - name: Static checks (lib_copy false)
-      if: matrix.lib_copy == false
-      run: |
-        mypy lib_excluded_testcase_output
+        mypy testcase_output
 
     - name: Run the generated tests (lib_copy true)
-      if: matrix.lib_copy == true
       run: |
-        python -m unittest discover -s lib_included_testcase_output
-
-    - name: Run the generated tests (lib_copy false)
-      if: matrix.lib_copy == false
-      run: |
-        python -m unittest discover -s lib_excluded_testcase_output
+        python -m unittest discover -s testcase_output
 
   autoformating:
     needs:
