--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,6 +1,8 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CI
+permissions:
+  contents: read
 
 # Controls when the action will run.
 on:
