Remove erroneous suffix from test case name

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -359,7 +359,7 @@ jobs:
       run: |
         mypy testcase_output
 
-    - name: Run the generated tests (lib_copy true)
+    - name: Run the generated tests
       run: |
         python -m unittest discover -s testcase_output
 
