--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -339,7 +339,6 @@ jobs:
       matrix:
         python-version: [3.9, "3.10", "3.11", "3.12", "3.13", "3.14"]
         lib_copy: [true, false]
-        hashing_mode: ["PYTHONHASH", "SHA256"]
 
     steps:
     - uses: actions/checkout@v4
@@ -365,12 +364,12 @@ jobs:
     - name: Generate testcases (lib_copy true)
       if: matrix.lib_copy == true
       run: |
-        python generate_testcases.py --copy_libraries --output testcase_output --hashing_mode ${{ matrix.hashing_mode }}
+        python generate_testcases.py --copy_libraries --output testcase_output
 
     - name: Generate testcases (lib_copy false)
       if: matrix.lib_copy == false
       run: |
-        python generate_testcases.py --output testcase_output --hashing_mode ${{ matrix.hashing_mode }}
+        python generate_testcases.py --output testcase_output
 
     - name: Static checks
       run: |
