--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,11 @@ dev = [
     "mypy",
     "pylint",
     "coverage",
-    "peakrdl"
+    "peakrdl",
+    # needed for the documentation build
+    "sphinx-book-theme",
+    "pygments-systemrdl"
+
 ]
 peakrdl = [
     "peakrdl"
